--- a/index.html
+++ b/index.html
@@ -111,7 +111,70 @@
     <!-- main -->
 
     <main>
+        <!-- hot bikes section  -->
+        <section class="text-start text-md-center mt-5 mb-4">
+            <h1>Hot Bikes In this Year</h1>
+            <p class="text-danger">best bike collection</p>
+            <hr class="w-25 mx-auto border-danger">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 mt-5 px-5">
+                <div class="col">
+                    <img class="w-100" src="images/feature-bike.jpg" alt="">
+                </div>
+                <div class="col"> <img class="w-75" src="images/feature-bike.jpg" alt=""></div>
+                <div class="col"> <img class="w-100" src="images/feature-bike.jpg" alt=""></div>
+            </div>
 
+        </section>
+
+        <!-- New Arrival Section  -->
+
+        <section class="bg-info bg-opacity-25 py-5 px-4 rounded">
+            <h1 class="text-center mt-5">New Arrival</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100 rounded-4">
+                    <img src="images/bike-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                      <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 rounded-4">
+                    <img src="images/bike-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 rounded-4">
+                    <img src="images/bike-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+
+        <!-- Happy Clients -->
+
+        <section>
+            
+        </section>
     </main>
 
     <!-- footer -->
